# ComfyUI

./: .cursorignore  .dockerignore  .gitignore  .python-version  AGENTS.md  Dockerfile  cuda_malloc.py  docker-compose.yml  hugdown.py  pyproject.toml  requirements.txt  ruff.toml  run.sh  run_GUI.bat  run_nvidia_gpu.bat  takeoff_cloth.py  ubuntu.md  update_custom_nodes.sh
comfy/: sd.py
tasks/: facealgin.py  facealgin2.py  swapface.py  swapface_hyperlora.py  take_clothsd15.py  take_clothsdxl.py
tools/: app.py  facealgin.py  facealgin2.py
tools/controllers/: main_controller.py  swapface_controller.py  takecloth_controller.py
tools/cores/: config.py  swapface_hyperlora_core.py  takecloth_core.py
tools/models/: app_model.py  swapface_model.py  takecloth_model.py
tools/views/: main_view.py  swapface_tab.py  tabview2.py  takcloth_tab.py
