[project]
name = "ComfyUI"
version = "0.3.75"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "comfyui-frontend-package==1.25.10",
    "comfyui-workflow-templates==0.1.65",
    "comfyui-embedded-docs==0.2.6",
    "torch",
    "torchsde",
    "torchvision",
    "torchaudio",
    "numpy>=1.26.4",
    "einops",
    "transformers==4.51.2",
    "tokenizers>=0.13.3",
    "sentencepiece>=0.2.0",
    "safetensors>=0.4.2",
    "aiohttp>=3.11.8",
    "yarl>=1.18.0",
    "pyyaml",
    "pillow",
    "scipy",
    "tqdm",
    "psutil",
    "alembic",
    "SQLAlchemy",
    "av>=14.2.0",
    "kornia>=0.7.1",
    "spandrel",
    "soundfile",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "importlib-metadata>=8.7.0",
    "huggingface-hub>=0.34.4",
    "opencv-python>=4.9.0.80",
    "filelock>=3.19.1",
    "scikit-image>=0.24.0",
    "python-dateutil>=2.9.0.post0",
    "mediapipe>=0.10.14",
    "svglib>=1.5.1",
    "fvcore>=0.1.5.post20221221",
    "yapf>=0.43.0",
    "omegaconf>=2.3.0",
    "ftfy>=6.3.1",
    "addict>=2.4.0",
    "yacs>=0.1.8",
    "trimesh[easy]>=4.7.4",
    "albumentations>=1.4.10",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.9.4",
    "diffusers>=0.33.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.17.1",
    "onnxruntime-gpu>=1.20.2 ; platform_machine == 'x86_64' and sys_platform != 'darwin'",
    "color-matcher>=0.6.0",
    "translators>=6.0.1",
    "opencv-python-headless>=4.11.0.86",
    "imageio-ffmpeg>=0.5.1",
    "lmdb>=1.4.1",
    "timm>=1.0.9",
    "rich>=13.7.1",
    "ultralytics>=8.3.184",
    "tyro==0.8.5",
    "dill>=0.4.0",
    "librosa>=0.11.0",
    "torchdiffeq>=0.2.5",
    "face-alignment>=1.4.1",
    "seconohe>=1.0.2",
    "accelerate>=1.2.1",
    "segment-anything>=1.0",
    "gguf>=0.14.0",
    "protobuf>=4.25.8",
    "peft>=0.15.0",
    "pyloudnorm>=0.1.1",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]
exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
comfy-script = { path = "custom_nodes/ComfyScript", editable = true }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
