[project]
name = "ComfyUI"
version = "0.5.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "comfyui-frontend-package==1.25.11",
    "comfyui-workflow-templates==0.1.70",
    "comfyui-embedded-docs==0.2.6",
    "torch",
    "torchsde",
    "torchvision",
    "torchaudio",
    "numpy>=1.25.0",
    "einops",
    "transformers>=4.37.2",
    "tokenizers>=0.13.3",
    "sentencepiece>=0.2.0",
    "safetensors>=0.4.2",
    "aiohttp>=3.11.8",
    "yarl>=1.18.0",
    "pyyaml",
    "pillow>=10.3.0",
    "scipy",
    "tqdm",
    "psutil",
    "alembic",
    "sqlalchemy",
    "av>=14.2.0",
    "kornia>=0.7.1",
    "spandrel",
    "soundfile",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "importlib-metadata>=8.7.0",
    "huggingface-hub>=0.19.0",
    "opencv-python>=4.7.0",
    "filelock>=3.19.1",
    "scikit-image>=0.24.0",
    "python-dateutil>=2.9.0.post0",
    "mediapipe>=0.10.14",
    "svglib>=1.5.1",
    "fvcore>=0.1.5.post20221221",
    "yapf>=0.43.0",
    "omegaconf>=2.3.0",
    "ftfy>=6.3.1",
    "addict>=2.4.0",
    "yacs>=0.1.8",
    "trimesh[easy]>=4.7.4",
    "albumentations>=1.4.10",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.9.4",
    "diffusers>=0.33.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.15.0",
    "onnxruntime-gpu>=1.20.2 ; platform_machine == 'x86_64' and sys_platform != 'darwin'",
    "color-matcher>=0.6.0",
    "translators>=6.0.1",
    "opencv-python-headless>=4.11.0.86",
    "imageio-ffmpeg>=0.5.1",
    "lmdb>=1.4.1",
    "timm>=1.0.9",
    "rich>=13.7.1",
    "ultralytics>=8.3.184",
    "tyro==0.8.5",
    "dill>=0.4.0",
    "librosa>=0.11.0",
    "torchdiffeq>=0.2.5",
    "face-alignment>=1.4.1",
    "seconohe>=1.0.2",
    "accelerate>=1.2.1",
    "segment-anything>=1.0",
    "gguf>=0.14.0",
    "protobuf>=3.20.2,<6.0.0",
    "peft>=0.15.0",
    "pyloudnorm>=0.1.1",
    "moviepy>=2.2.1",
    "sageattention>=1.0.6",
    "triton-windows>=3.4.0.post20",
    "mss>=10.1.0",
    "transparent-background>=1.1.2",
    "groundingdino-py>=0.4.0",
    "onnxruntime-gpu>=1.15.0",
    "hydra-core>=1.3.0",
    "iopath>=0.1.9",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]
exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
comfy-script = { path = "custom_nodes/ComfyScript", editable = true }
sageattention = { path = "whl/sageattention-2.1.1+cu128torch2.8.0-cp312-cp312-win_amd64.whl" }
groundingdino-py = { path = "whl/groundingdino_py-0.4.0-py2.py3-none-any.whl" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
